# Timer

./: .gitignore  Application.cpp  CMakeLists.txt  CMakePresets.json  README.md  Timer.pri  Timer.pro  Timer.qrc  dialog.cpp  dialog.h  main.cpp
src/: Application.cpp  Application.h
